# Inverted-Pendulum

./: .gitignore  CLAUDE.md  Makefile  README.md  visualization.py
PID/PID/: PID.ino
PID/PID2/: PID2.ino
PID/PID3/: PID3.ino
PID/PID4/: PID4.ino
PID/PID5/: PID5.ino
Rotary_Encoder/: Rotary_Encoder.ino
Rotary_Encoder/Optiacal_Rotary_Encoder/: Optiacal_Rotary_Encoder.ino
Rotary_Stepper _Test/rotary_to_stepper/: rotary_to_stepper.ino
Stpper_Motor/Acc_Test/: Acc_Test.ino
archive/PID2/: PID2.ino
archive/PID3/: PID3.ino
archive/Rotary_Encoder/: Rotary_Encoder.ino
archive/Rotary_Encoder/Optiacal_Rotary_Encoder/: Optiacal_Rotary_Encoder.ino
archive/Rotary_Encoder/Optical_encoder_2/: Optical_encoder_2.ino
boards/: bluepill.mk  esp32.mk  mega.mk  uno.mk
boards/bluepill/: STM32F103C8Tx_FLASH.ld  openocd.cfg
boards/esp32/: CMakeLists.txt  sdkconfig.defaults
boards/esp32/components/: arduino
boards/esp32/main/: CMakeLists.txt
docs/: wiring.md
examples/: README.md
examples/encoder_readout/: main.cpp
examples/rotary_to_stepper/: main.cpp
examples/stepper_accel_test/: main.cpp
lib/BoardConfig/: BoardConfig.h
lib/PIDController/: PIDController.cpp  PIDController.h
lib/QuadratureEncoder/: QuadratureEncoder.cpp  QuadratureEncoder.h
lib/StepperDriver/: StepperDriver.cpp  StepperDriver.h
make/: avr.mk  common.mk  esp32.mk  stm32.mk
scripts/: flash.sh  install_toolchains.sh
src/: main.cpp
tests/: Makefile  test_encoder.cpp  test_framework.h  test_main.cpp  test_pid.cpp
tools/: visualization.py
